--- a/bin/view/Movies.fxml
+++ b/bin/view/Movies.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.MenuButton?>
@@ -10,7 +14,7 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane fx:id="root" minHeight="300.0" minWidth="400.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MoviesController">
+<AnchorPane fx:id="root" minHeight="300.0" minWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MoviesController">
    <children>
       <BorderPane prefHeight="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
@@ -29,8 +33,9 @@
                   <HBox alignment="CENTER_LEFT" spacing="5.0" AnchorPane.leftAnchor="0.0">
                      <children>
                         <MenuButton fx:id="advance" mnemonicParsing="false" stylesheets="@../css/MenuButton.css" text="+" />
-                        <TextField onKeyPressed="#FindMovies" styleClass="textField" stylesheets="@../css/SearchTextField.css" />
-                        <Button mnemonicParsing="false" text="Tìm kiếm" />
+                        <TextField fx:id="condition" onKeyPressed="#FindMovies" styleClass="textField" stylesheets="@../css/SearchTextField.css" />
+                        <Button fx:id="btn_timkiem" mnemonicParsing="false" text="Tìm kiếm" />
+                        <Button fx:id="btn_refresh" mnemonicParsing="false" text="Refresh" />
                      </children>
                   </HBox>
                   <Button mnemonicParsing="false" onAction="#AddNewMovie" stylesheets="@../css/button.css" text="Thêm phim" AnchorPane.rightAnchor="0.0" />
