--- a/src/view/Schedule.fxml
+++ b/src/view/Schedule.fxml
@@ -66,7 +66,7 @@
                   </AnchorPane>
                   <AnchorPane GridPane.columnIndex="1">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="btn_thuhai" mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -74,7 +74,7 @@
                               <VBox alignment="CENTER">
                                  <children>
                                     <Label text="Thứ hai" />
-                                    <Label styleClass="fontBigSize" text="Ngày" />
+                                    <Label fx:id="lb_thuhai" styleClass="fontBigSize" text="Ngày" />
                                  </children>
                               </VBox>
                            </graphic>
@@ -83,7 +83,7 @@
                   </AnchorPane>
                   <AnchorPane GridPane.columnIndex="2">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="btn_thuba" mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -91,7 +91,7 @@
                               <VBox alignment="CENTER">
                                  <children>
                                     <Label text="Thứ ba" />
-                                    <Label styleClass="fontBigSize" text="Ngày" />
+                                    <Label fx:id="lb_thuba" styleClass="fontBigSize" text="Ngày" />
                                  </children>
                               </VBox>
                            </graphic>
@@ -100,7 +100,7 @@
                   </AnchorPane>
                   <AnchorPane GridPane.columnIndex="3">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="btn_thutu" mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -108,7 +108,7 @@
                               <VBox alignment="CENTER">
                                  <children>
                                     <Label text="Thứ tư" />
-                                    <Label styleClass="fontBigSize" text="Ngày" />
+                                    <Label fx:id="lb_thutu" styleClass="fontBigSize" text="Ngày" />
                                  </children>
                               </VBox>
                            </graphic>
@@ -117,7 +117,7 @@
                   </AnchorPane>
                   <AnchorPane GridPane.columnIndex="4">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="btn_thunam" mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -125,7 +125,7 @@
                               <VBox alignment="CENTER">
                                  <children>
                                     <Label text="Thứ năm" />
-                                    <Label styleClass="fontBigSize" text="Ngày" />
+                                    <Label fx:id="lb_thunam" styleClass="fontBigSize" text="Ngày" />
                                  </children>
                               </VBox>
                            </graphic>
@@ -134,7 +134,7 @@
                   </AnchorPane>
                   <AnchorPane GridPane.columnIndex="5">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="btn_thusau" mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -142,7 +142,7 @@
                               <VBox alignment="CENTER">
                                  <children>
                                     <Label text="Thứ sáu" />
-                                    <Label styleClass="fontBigSize" text="Ngày" />
+                                    <Label fx:id="lb_thusau" styleClass="fontBigSize" text="Ngày" />
                                  </children>
                               </VBox>
                            </graphic>
@@ -151,7 +151,7 @@
                   </AnchorPane>
                   <AnchorPane GridPane.columnIndex="6">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="btn_thubay" mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -159,7 +159,7 @@
                               <VBox alignment="CENTER">
                                  <children>
                                     <Label text="Thứ bảy" />
-                                    <Label styleClass="fontBigSize" text="Ngày" />
+                                    <Label fx:id="lb_thubay" styleClass="fontBigSize" text="Ngày" />
                                  </children>
                               </VBox>
                            </graphic>
@@ -168,7 +168,7 @@
                   </AnchorPane>
                   <AnchorPane GridPane.columnIndex="7">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Button fx:id="btn_chunhat" mnemonicParsing="false" styleClass="menuButton" stylesheets="@../css/button.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -180,7 +180,7 @@
                                           <Insets left="-10.0" right="-10.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <Label styleClass="fontBigSize" text="Ngày" />
+                                    <Label fx:id="lb_chunhat" styleClass="fontBigSize" text="Ngày" />
                                  </children>
                               </VBox>
                            </graphic>
