--- a/bin/view/Schedule.fxml
+++ b/bin/view/Schedule.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -20,7 +27,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.control.ComboBox?>
 
-<AnchorPane minHeight="400.0" minWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ScheduleController">
+<AnchorPane minHeight="400.0" minWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ScheduleController">
    <children>
       <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -215,22 +222,39 @@
                   </Pane>
                </content>
             </ScrollPane>
-            <HBox alignment="BOTTOM_LEFT">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="11" underline="true">
-                     <font>
-                        <Font size="48.0" />
-                     </font>
-                  </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="fontBigSize" text="tháng-năm">
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" />
-                     </HBox.margin>
-                  </Text>
-               </children>
+            <HBox fx:id="hbox" alignment="BOTTOM_LEFT">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
+               <children>
+                  <Label fx:id="lb_ngay" text="11" underline="true">
+                     <font>
+                        <Font size="48.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lb_thang" text="Label">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <padding>
+                        <Insets bottom="5.0" right="10.0" />
+                     </padding>
+                  </Label>
+                  <Label fx:id="lb_nam" text="Label">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                     <padding>
+                        <Insets bottom="5.0" right="10.0" />
+                     </padding>
+                  </Label>
+               </children>
             </HBox>
             <HBox alignment="CENTER_RIGHT" spacing="10.0" GridPane.halignment="RIGHT">
                <children>
