--- a/src/view/Service.fxml
+++ b/src/view/Service.fxml
@@ -44,7 +44,7 @@
                   <Button fx:id="btn_refresh" mnemonicParsing="false" text="Refresh" />
                </children>
             </HBox>
-            <Button fx:id="btn_theemsanpham" mnemonicParsing="false" onAction="#AddNewServive" text="Thêm sản phẩm" AnchorPane.rightAnchor="0.0" />
+            <Button fx:id="btn_themsanpham" mnemonicParsing="false" onAction="#AddNewServive" text="Thêm sản phẩm" AnchorPane.rightAnchor="0.0" />
             <MenuButton fx:id="cartString" mnemonicParsing="false" stylesheets="@../css/MenuButton.css" text="Giỏ hàng" AnchorPane.rightAnchor="0.0">
                <items>
                   <CustomMenuItem hideOnClick="false" mnemonicParsing="false">
